fix:alignments fixed for the three responsive views

--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ body{
 }
 .main{
     padding-top: 100px;
-   
+    padding-left: 138px;
     width: 100%;
     max-width: 1244px;
-    margin: 0 auto;
+    margin: 0;
     height: 100%;
     
     display: flex;
@@ -26,7 +26,6 @@ body{
 .images{
     padding-top:33px;
     width: 100%;
-
     height: 100%;
     max-width: 600px;
     background-color: black;
@@ -39,7 +38,7 @@ body{
   max-width: 550px;
   display: flex;
   flex-direction: column;
-  position: relative;
+ 
 }
 .stats {
   display: flex;
@@ -101,6 +100,7 @@ body{
         opacity: 80%;
         max-height: 62px;
         overflow: hidden;
+         gap: 24px;
 }
 .btn-container {
   margin-top: auto;
@@ -149,15 +149,17 @@ height: 100%;
 
 .images img {
   object-fit: contain;
-  width: 100%; height: 100%;
   max-width: 600px;
   display: block;
+  border-radius: 12px;
 }
 
 @media (max-width: 768px) {
   .main {
     flex-direction: column;
     height: auto;
+    padding-left: 5px;
+    max-width: 768px;;
    
   }
 
@@ -165,6 +167,9 @@ height: 100%;
     display: contents; 
   }
 
+  .images img{
+    border-radius: 12px;
+  }
   .heading {
     order: 1;
     width: 100%;
@@ -213,10 +218,20 @@ height: 100%;
   }
 }
 @media (max-width: 375px) {
+  .main{
+    max-width: 375px;
+    margin-left: 2px;
+    margin-right: 2px;
+      padding: 5px !important;
+    border: #ff2a2a solid 1px;
+  }
   .heading-text h1 {
     font-size: 26px;
     line-height: 120%;
    
+  }
+  .images img{
+    border-radius: 12px;
   }
   .heading-text{
     max-width: 100%;
